# PowerBrain

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: ai.py  auth.py  calendar.py  objectives.py  routes.py
backend/core/: config.py  models.py
backend/db/: base.py  database.py
backend/models/: learning.py  user.py
backend/services/: ai_prompt.py  ai_service.py  calendar_service.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/loginSignUp/: LoginSignUp.css  LoginSignUp.jsx
